--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,8 +1,8 @@
 # Global logging configuration
 #log4j.rootLogger=WARN, C
 log4j.logger.org.tamacat=DEBUG, C
-log4j.logger.org.apache=TRACE, C
-log4j.logger.com=TRACE, C
+log4j.logger.org.apache=INFO, C
+log4j.logger.com=DEBUG, C
 
 log4j.additivity.org.tamacat=false
 log4j.additivity.org.apache=false
