--- a/pom.xml
+++ b/pom.xml
@@ -7,21 +7,24 @@
 	<packaging>jar</packaging>
 	<version>1.4</version>
 
+  	<properties>
+    	<project.google.sdk.version>1.22.0</project.google.sdk.version>
+    </properties>
+	
 	<dependencies>
-
 		<dependency>
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk-s3</artifactId>
-			<version>1.11.145</version>
+			<version>1.11.150</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
-		    <groupId>com.google.cloud</groupId>
-		    <artifactId>google-cloud-storage</artifactId>
-		    <version>1.1.0</version>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-storage</artifactId>
+			<version>1.2.0</version>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>org.tamacat</groupId>
 			<artifactId>tamacat-core</artifactId>
@@ -33,11 +36,11 @@
 			<artifactId>tamacat-dao</artifactId>
 			<version>1.4</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
-			<version>[1.3.1,)</version>
+			<version>1.3.2</version>
 		</dependency>
 
 		<dependency>
@@ -45,7 +48,7 @@
 			<artifactId>log4j</artifactId>
 			<version>[1.2.17,1.3)</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
