update add test
git-svn-id: https://svn.code.sf.net/p/tamacat/code/branches/tamacat-storage-1.4@1195 f3cb667f-c9e3-46e3-bc2c-302c0b7402fb

--- a/src/test/resources/minio-storage.properties
+++ b/src/test/resources/minio-storage.properties
@@ -1,6 +1,10 @@
+#
+# Minio Server Cloud Storage
+#
 
-accessKey=
-secretKey=
+accessKey=X5I0DGK41F084ZFXJ8C4
+secretKey=ZHuq3Pncmzp8xlMyoIWsIO5cDBYpRdKwQ90kXLjC
+region=us-east-1
 
 endpoint=http://localhost:9000
 bucket=test
@@ -8,7 +12,6 @@ root=test
 
 max_file_size=104857600
 
-#signer=S3SignerType
 pathStyleAccess=true
 chunkedEncodingDisabled=true
 
